# NewTwitter-API

./: .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yaml
backend/: .coveragerc  .env.dev  Dockerfile  Makefile  Procfile  manage.py  pyproject.toml  pytest.ini
backend/docker/nginx/: nginx.conf
backend/fixtures/: postagens.json  ususarios.json
backend/newtwitter/: asgi.py  settings.py  urls.py  wsgi.py
backend/postagens/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/postagens/migrations/: 0001_initial.py  0002_initial.py  0003_alter_curtida_unique_together_and_more.py  0004_curtidacomentario.py
backend/postagens/tests/: test_comentario.py  test_curtida.py  test_postagens.py
backend/relacionamentos/: apps.py  models.py  serializers.py  urls.py  views.py
backend/relacionamentos/migrations/: 0001_initial.py  0002_initial.py
backend/relacionamentos/tests/: test_relacionamento.py
backend/scripts/: seedar_dados.py
backend/usuarios/: models.py  serializers.py  urls.py  views.py
backend/usuarios/migrations/: 0001_initial.py
backend/usuarios/tests/: test_usuarios.py
frontend/: .env.production  DockerFile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.estilo.ts  App.tsx  main.tsx  rotas.tsx  tipos.ts
frontend/src/api/: auth.ts  cliente.ts
frontend/src/componentes/: BotaoCurtir.estilo.ts  BotaoCurtir.tsx  BotaoSeguir.estilo.ts  Cabecalho.estilo.ts  Cabecalho.tsx  CartaoPost.estilo.ts  CartaoPost.tsx  DrawerLateral.estilo.ts  DrawerLateral.tsx  Hamburguer.estilo.ts  ListaComentarios.estilo.ts  (+4 more)
(+18 files in other folders)
