[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend Django do Newtwitter (estudo/portfólio)"
authors = ["Ricardo Sprocati <ricardosprocatioliveira@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.15"
djangorestframework-simplejwt = "^5.3"
drf-spectacular = "^0.27"
pillow = "^10.4"
django-cors-headers = "^4.4"
python-dotenv = "^1.0"
psycopg2-binary = "^2.9"
gunicorn = "^21.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"
model-bakery = "^1.20.5"
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.12.8"
coverage = "^7.10.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.8.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

